@@ -77,6 +77,12 @@ Before overriding the last object, this function calls event_looseFocus on the o
 	debug.writeMessage("setFocusObject: %s %s %s %s"%(obj.name,obj.typeString,obj.value,obj.description))
 	return True
 
+def getMouseObject():
+	return globalVars.mouseObject
+
+def setMouseObject(obj):
+	globalVars.mouseObject=obj
+
 def getDesktopObject():
 	return globalVars.desktopObject
 
