@@ -8,8 +8,6 @@ class voiceSettingsDialog(wx.Dialog):
 	def __init__(self,parent,ID,title):
 		wx.Dialog.__init__(self,parent,ID,title)
 		mainSizer=wx.BoxSizer(wx.VERTICAL)
-		message=wx.StaticText(self,-1,label=_("Set the voice, rate, pitch and volume that you prefer."))
-		mainSizer.Add(message)
 		settingsSizer=wx.BoxSizer(wx.VERTICAL)
 		voiceListSizer=wx.BoxSizer(wx.HORIZONTAL)
 		voiceListLabel=wx.StaticText(self,-1,label=_("Voice"))
@@ -19,7 +17,7 @@ class voiceSettingsDialog(wx.Dialog):
 		wx.EVT_CHOICE(self,voiceListID,self.onVoiceChange)
 		voiceListSizer.Add(voiceListLabel)
 		voiceListSizer.Add(voiceList)
-		settingsSizer.Add(voiceListSizer)
+		settingsSizer.Add(voiceListSizer,border=10,flag=wx.BOTTOM)
 		rateSliderSizer=wx.BoxSizer(wx.HORIZONTAL)
 		rateSliderLabel=wx.StaticText(self,-1,label=_("Rate"))
 		rateSliderID=wx.NewId()
@@ -27,7 +25,7 @@ class voiceSettingsDialog(wx.Dialog):
 		wx.EVT_SLIDER(self,rateSliderID,self.onRateChange)
 		rateSliderSizer.Add(rateSliderLabel)
 		rateSliderSizer.Add(rateSlider)
-		settingsSizer.Add(rateSliderSizer)
+		settingsSizer.Add(rateSliderSizer,border=10,flag=wx.BOTTOM)
 		pitchSliderSizer=wx.BoxSizer(wx.HORIZONTAL)
 		pitchSliderLabel=wx.StaticText(self,-1,label=_("Pitch"))
 		pitchSliderID=wx.NewId()
@@ -35,7 +33,7 @@ class voiceSettingsDialog(wx.Dialog):
 		wx.EVT_SLIDER(self,pitchSliderID,self.onPitchChange)
 		pitchSliderSizer.Add(pitchSliderLabel)
 		pitchSliderSizer.Add(pitchSlider)
-		settingsSizer.Add(pitchSliderSizer)
+		settingsSizer.Add(pitchSliderSizer,border=10,flag=wx.BOTTOM)
 		volumeSliderSizer=wx.BoxSizer(wx.HORIZONTAL)
 		volumeSliderLabel=wx.StaticText(self,-1,label=_("Volume"))
 		volumeSliderID=wx.NewId()
@@ -43,20 +41,22 @@ class voiceSettingsDialog(wx.Dialog):
 		wx.EVT_SLIDER(self,volumeSliderID,self.onVolumeChange)
 		volumeSliderSizer.Add(volumeSliderLabel)
 		volumeSliderSizer.Add(volumeSlider)
-		settingsSizer.Add(volumeSliderSizer)
+		settingsSizer.Add(volumeSliderSizer,border=10,flag=wx.BOTTOM)
 		punctuationCheckBoxID=wx.NewId()
 		punctuationCheckBox=wx.CheckBox(self,punctuationCheckBoxID,label=_("Speak all punctuation"))
 		punctuationCheckBox.SetValue(config.conf["speech"]["speakPunctuation"])
 		wx.EVT_CHECKBOX(self,punctuationCheckBoxID,self.onPunctuationChange)
-		settingsSizer.Add(punctuationCheckBox)
+		settingsSizer.Add(punctuationCheckBox,border=10,flag=wx.BOTTOM)
 		capsCheckBoxID=wx.NewId()
 		capsCheckBox=wx.CheckBox(self,capsCheckBoxID,label=_("Say cap before capitals"))
 		capsCheckBox.SetValue(config.conf["speech"][synthDriverHandler.driverName]["sayCapForCapitals"])
 		wx.EVT_CHECKBOX(self,capsCheckBoxID,self.onCapsChange)
-		settingsSizer.Add(capsCheckBox)
-		mainSizer.Add(settingsSizer)
+		settingsSizer.Add(capsCheckBox,border=10,flag=wx.BOTTOM)
+		mainSizer.Add(settingsSizer,border=20,flag=wx.LEFT|wx.RIGHT|wx.TOP)
+		buttonSizer=wx.BoxSizer(wx.HORIZONTAL)
 		buttonSizer=self.CreateButtonSizer(wx.OK|wx.CANCEL)
-		mainSizer.Add(buttonSizer)
+		mainSizer.Add(buttonSizer,border=20,flag=wx.LEFT|wx.RIGHT|wx.BOTTOM)
+		mainSizer.Fit(self)
 		self.SetSizer(mainSizer)
 
 	def onVoiceChange(self,evt):
@@ -82,28 +82,27 @@ class keyboardEchoDialog(wx.Dialog):
 
 	def __init__(self,parent,ID,title):
 		wx.Dialog.__init__(self,parent,ID,title)
-		mainSizer=wx.BoxSizer(wx.HORIZONTAL)
-		message=wx.StaticText(self,-1,label=_("Choose whether to echo any of typed characters, words, or command keys."))
-		mainSizer.Add(message)
+		mainSizer=wx.BoxSizer(wx.VERTICAL)
 		settingsSizer=wx.BoxSizer(wx.VERTICAL)
 		charsCheckBoxID=wx.NewId()
 		charsCheckBox=wx.CheckBox(self,charsCheckBoxID,label=_("Speak typed characters"))
 		charsCheckBox.SetValue(config.conf["keyboard"]["speakTypedCharacters"])
 		wx.EVT_CHECKBOX(self,charsCheckBoxID,self.onCharsChange)
-		settingsSizer.Add(charsCheckBox)
+		settingsSizer.Add(charsCheckBox,border=10,flag=wx.BOTTOM)
 		wordsCheckBoxID=wx.NewId()
 		wordsCheckBox=wx.CheckBox(self,wordsCheckBoxID,label=_("Speak typed words"))
 		wordsCheckBox.SetValue(config.conf["keyboard"]["speakTypedWords"])
 		wx.EVT_CHECKBOX(self,wordsCheckBoxID,self.onWordsChange)
-		settingsSizer.Add(wordsCheckBox)
+		settingsSizer.Add(wordsCheckBox,border=10,flag=wx.BOTTOM)
 		commandKeysCheckBoxID=wx.NewId()
 		commandKeysCheckBox=wx.CheckBox(self,commandKeysCheckBoxID,label=_("Speak command keys"))
 		commandKeysCheckBox.SetValue(config.conf["keyboard"]["speakCommandKeys"])
 		wx.EVT_CHECKBOX(self,commandKeysCheckBoxID,self.onCommandKeysChange)
-		settingsSizer.Add(commandKeysCheckBox)
-		mainSizer.Add(settingsSizer)
+		settingsSizer.Add(commandKeysCheckBox,border=10,flag=wx.BOTTOM)
+		mainSizer.Add(settingsSizer,border=20,flag=wx.LEFT|wx.RIGHT|wx.TOP)
 		buttonSizer=self.CreateButtonSizer(wx.OK|wx.CANCEL)
-		mainSizer.Add(buttonSizer)
+		mainSizer.Add(buttonSizer,border=20,flag=wx.LEFT|wx.RIGHT|wx.BOTTOM)
+		mainSizer.Fit(self)
 		self.SetSizer(mainSizer)
 
 	def onCharsChange(self,evt):
@@ -119,23 +118,22 @@ class mouseSettingsDialog(wx.Dialog):
 
  	def __init__(self,parent,ID,title):
 		wx.Dialog.__init__(self,parent,ID,title)
-		mainSizer=wx.BoxSizer(wx.HORIZONTAL)
-		message=wx.StaticText(self,-1,label=_("Choose what information about the mouse should be reported"))
-		mainSizer.Add(message)
+		mainSizer=wx.BoxSizer(wx.VERTICAL)
 		settingsSizer=wx.BoxSizer(wx.VERTICAL)
 		shapeCheckBoxID=wx.NewId()
 		shapeCheckBox=wx.CheckBox(self,shapeCheckBoxID,label=_("Report mouse shape changes"))
 		shapeCheckBox.SetValue(config.conf["mouse"]["reportMouseShapeChanges"])
 		wx.EVT_CHECKBOX(self,shapeCheckBoxID,self.onShapeChange)
-		settingsSizer.Add(shapeCheckBox)
+		settingsSizer.Add(shapeCheckBox,border=10,flag=wx.BOTTOM)
 		objectCheckBoxID=wx.NewId()
 		objectCheckBox=wx.CheckBox(self,objectCheckBoxID,label=_("Report object under mouse"))
 		objectCheckBox.SetValue(config.conf["mouse"]["reportObjectUnderMouse"])
 		wx.EVT_CHECKBOX(self,objectCheckBoxID,self.onObjectChange)
-		settingsSizer.Add(objectCheckBox)
-		mainSizer.Add(settingsSizer)
+		settingsSizer.Add(objectCheckBox,border=10,flag=wx.BOTTOM)
+		mainSizer.Add(settingsSizer,border=20,flag=wx.LEFT|wx.RIGHT|wx.TOP)
 		buttonSizer=self.CreateButtonSizer(wx.OK|wx.CANCEL)
-		mainSizer.Add(buttonSizer)
+		mainSizer.Add(buttonSizer,border=20,flag=wx.LEFT|wx.RIGHT|wx.BOTTOM)
+		mainSizer.Fit(self)
 		self.SetSizer(mainSizer)
 
 	def onShapeChange(self,evt):
@@ -148,43 +146,42 @@ class objectPresentationDialog(wx.Dialog):
 
 	def __init__(self,parent,ID,title):
 		wx.Dialog.__init__(self,parent,ID,title)
-		mainSizer=wx.BoxSizer(wx.HORIZONTAL)
-		message=wx.StaticText(self,-1,label=_("Choose what information objects should report, and whether to be notified of things such as tooltips and help balloons."))
-		mainSizer.Add(message)
+		mainSizer=wx.BoxSizer(wx.VERTICAL)
 		settingsSizer=wx.BoxSizer(wx.VERTICAL)
 		tooltipCheckBoxID=wx.NewId()
 		tooltipCheckBox=wx.CheckBox(self,tooltipCheckBoxID,label=_("Report tooltips"))
 		tooltipCheckBox.SetValue(config.conf["presentation"]["reportTooltips"])
 		wx.EVT_CHECKBOX(self,tooltipCheckBoxID,self.onTooltipChange)
-		settingsSizer.Add(tooltipCheckBox)
+		settingsSizer.Add(tooltipCheckBox,border=10,flag=wx.BOTTOM)
 		balloonCheckBoxID=wx.NewId()
 		balloonCheckBox=wx.CheckBox(self,balloonCheckBoxID,label=_("Report help balloons"))
 		balloonCheckBox.SetValue(config.conf["presentation"]["reportHelpBalloons"])
 		wx.EVT_CHECKBOX(self,balloonCheckBoxID,self.onBalloonChange)
-		settingsSizer.Add(balloonCheckBox)
+		settingsSizer.Add(balloonCheckBox,border=10,flag=wx.BOTTOM)
 		shortcutCheckBoxID=wx.NewId()
 		shortcutCheckBox=wx.CheckBox(self,shortcutCheckBoxID,label=_("Report object shortcut keys"))
 		shortcutCheckBox.SetValue(config.conf["presentation"]["reportKeyboardShortcuts"])
 		wx.EVT_CHECKBOX(self,shortcutCheckBoxID,self.onShortcutChange)
-		settingsSizer.Add(shortcutCheckBox)
+		settingsSizer.Add(shortcutCheckBox,border=10,flag=wx.BOTTOM)
 		groupCheckBoxID=wx.NewId()
 		groupCheckBox=wx.CheckBox(self,groupCheckBoxID,label=_("Report object group names"))
 		groupCheckBox.SetValue(config.conf["presentation"]["reportObjectGroupNames"])
 		wx.EVT_CHECKBOX(self,groupCheckBoxID,self.onGroupChange)
-		settingsSizer.Add(groupCheckBox)
+		settingsSizer.Add(groupCheckBox,border=10,flag=wx.BOTTOM)
 		stateFirstCheckBoxID=wx.NewId()
 		stateFirstCheckBox=wx.CheckBox(self,stateFirstCheckBoxID,label=_("Say object state first"))
 		stateFirstCheckBox.SetValue(config.conf["presentation"]["sayStateFirst"])
 		wx.EVT_CHECKBOX(self,stateFirstCheckBoxID,self.onStateFirstChange)
-		settingsSizer.Add(stateFirstCheckBox)
+		settingsSizer.Add(stateFirstCheckBox,border=10,flag=wx.BOTTOM)
 		progressBeepCheckBoxID=wx.NewId()
 		progressBeepCheckBox=wx.CheckBox(self,progressBeepCheckBoxID,label=_("Beep on progress bar updates"))
 		progressBeepCheckBox.SetValue(config.conf["presentation"]["beepOnProgressBarUpdates"])
 		wx.EVT_CHECKBOX(self,progressBeepCheckBoxID,self.onProgressBeepChange)
-		settingsSizer.Add(progressBeepCheckBox)
-		mainSizer.Add(settingsSizer)
+		settingsSizer.Add(progressBeepCheckBox,border=10,flag=wx.BOTTOM)
+		mainSizer.Add(settingsSizer,border=20,flag=wx.LEFT|wx.RIGHT|wx.TOP)
 		buttonSizer=self.CreateButtonSizer(wx.OK|wx.CANCEL)
-		mainSizer.Add(buttonSizer)
+		mainSizer.Add(buttonSizer,border=20,flag=wx.LEFT|wx.RIGHT|wx.BOTTOM)
+		mainSizer.Fit(self)
 		self.SetSizer(mainSizer)
 
 	def onTooltipChange(self,evt):
