@@ -1,5 +1,7 @@
 Changes since revision 297:
 *Documents in Mozilla Gecko now handle bullets and numbering of list items better. Previously a bullet would force a list item to sometimes be over two lines.
+*Configuration dialog boxes have been added for voice settings, mouse settings, keyboard echo and object presentation.
+*Improved the reading of objects under the mouse more so that hopefully NVDA will not freeze if using the mouse to close a window.
 
 Changes since revision 293:
 *Graphics in Mozilla Gecko virtualBuffers are now ignored if they do not have a title / alt attribute.
